navbar menu on mobile fix

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -67,6 +67,9 @@
   transition: transform 0.4s ease;
   width: 100%;
   z-index: 2;
+  @media only screen and (min-width: 700px) {
+    visibility: hidden !important;
+  }
 }
 
 .menu-item {
